<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="title_timer">Timer</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_setting">Setting</string>

    <string name="timer">Timer</string>
    <string name="timer_service_name">Timer Service</string>
    <string name="timer_service_notification">Timer service notification</string>

    <string name="timer_break">Break</string>

    <!-- Unit -->
    <string name="second">Second</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>

    <string name="minute_short" translatable="false">m</string>
    <string name="hour_short" translatable="false">h</string>

    <!-- Setting Strings -->
    <string name="setting_filename" translatable="false">top.learningman.hystime_preferences</string>

    <string name="setting_category_server">Server</string>
    <string name="setting_category_server_key" translatable="false">server_category</string>
    <string name="setting_category_server_title_valid">Server (Valid)</string>
    <string name="setting_category_server_title_pending">Server (Checking)</string>
    <string name="setting_category_server_title_invalid">Server (Invalid)</string>

    <string name="setting_backend_key" translatable="false">backend_url</string>
    <string name="setting_backend_title">GraphQL Endpoint</string>
    <string name="setting_backend_summary">Set backend GraphQL endpoint.</string>
    <string name="setting_auth_key" translatable="false">auth_code</string>
    <string name="setting_auth_title">Authorization Code</string>
    <string name="setting_auth_summary">Set endpoint authorization code.</string>

    <string name="setting_category_user">User</string>
    <string name="setting_category_user_key" translatable="false">user_category</string>
    <string name="setting_category_user_title_valid">User (Valid)</string>
    <string name="setting_category_user_title_pending">User (Checking)</string>
    <string name="setting_category_user_title_failed">User (Check Failed)</string>
    <string name="setting_category_user_title_invalid">User (Invalid)</string>

    <string name="setting_username_key" translatable="false">user</string>
    <string name="setting_username_title">Username</string>
    <string name="setting_username_summary">Set username</string>

    <string name="setting_category_app">Application</string>
    <string name="setting_fetch_policy_title">Always Fetch</string>
    <string name="setting_fetch_policy_key" translatable="false">fetch_policy</string>
    <string name="setting_fetch_policy_summary_on">Always fetch data from backend.</string>
    <string name="setting_fetch_policy_summary_off">Sync data only when first opened.</string>
    <string name="setting_vibration_title">Vibration</string>
    <string name="setting_vibration_key" translatable="false">vibration</string>

    <string name="setting_category_timer">Timer</string>
    <string name="setting_category_timer_setting_title">Timer Setting</string>

    <string name="setting_pref_normal_key" translatable="false">normal_timer_pref</string>
    <string name="setting_pref_normal_title">Normal Timer</string>
    <string name="setting_pref_normal_summary">Normal timer setting</string>
    <string name="setting_normal_length_key" translatable="false">normal_length</string>
    <string name="setting_normal_length_title">Focus time length</string>
    <string name="setting_normal_break_length_key" translatable="false">normal_break_length</string>
    <string name="setting_normal_break_length_title">Break time length</string>

    <string name="setting_pref_pomodoro_key" translatable="false">pomodoro_timer_pref</string>
    <string name="setting_pref_pomodoro_title">Pomodoro Timer</string>
    <string name="setting_pref_pomodoro_summary">Pomodoro timer setting</string>
    <string name="setting_pomodoro_length_key" translatable="false">pomodoro_length</string>
    <string name="setting_pomodoro_length_title">Pomodoro time length</string>
    <string name="setting_pomodoro_short_break_key" translatable="false">pomodoro_short_break</string>
    <string name="setting_pomodoro_short_break_title">Short break length</string>
    <string name="setting_pomodoro_long_break_key" translatable="false">pomodoro_long_break</string>
    <string name="setting_pomodoro_long_break_title">Long break length</string>


    <string name="setting_category_other">Other</string>
    <string name="setting_about_title">About</string>
    <string name="setting_about_key" translatable="false">about</string>

    <!-- Tab Strings -->
    <string name="tab_normal_timing">Normal</string>
    <string name="tab_pomodoro_timing">Pomodoro</string>

    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Continue</string>
    <string name="exit">Exit</string>
    <string name="skip">Skip</string>

    <string name="break_start">Start break</string>
    <string name="break_skip">Skip break</string>
    <string name="work_start">Start focus</string>
    <string name="work_continue">Continue focus</string>

    <!-- Place Holder -->
    <string name="default_target" translatable="false">Timing</string>
    <string name="default_time" translatable="false">00:00</string>
    <string name="default_date" translatable="false">01-01</string>
    <string name="default_time_number" translatable="false">00</string>
    <string name="default_number" translatable="false">0</string>

    <string name="refresh">Refresh</string>
    <string name="target_title_placeholder">Target Title</string>
    <string name="add_target">Add Target</string>
    <string name="user_not_valid">No valid users.</string>
    <string name="no_target">No Target</string>
    <string name="refresh_target_hint">Refreshing targets.</string>
    <string name="select_target_title">Select Target</string>
    <string name="no_target_hint">Please select a target.</string>
    <string name="vibration_hint">Use of vibration as operational feedback</string>
    <string name="focusing">Focusing</string>
    <string name="relaxing">Relaxing</string>
    <string name="fail_to_create_timepiece_toast">Failed to create time piece.</string>
    <string name="too_short_time_piece_toast">Time piece shorted than 1 minute will not be recorded.</string>

    <string name="target_name">Target name</string>
    <string name="spent_time">Spent time</string>

    <string name="normal">Normal</string>
    <string name="longterm">Long Term</string>
    <string name="pomodoro">Pomodoro</string>

    <string name="create">Create</string>
    <string name="target_name_empty">Target name can not be empty</string>
    <string name="target_time_invalid">Target time is invalid</string>
    <string name="target_type">Target type</string>
    <string name="cancel">Cancel</string>
    <string name="target_add_success_postfix">&#160;added successfully.</string>
    <string name="too_short_pomodoro_toast">Only complete pomodoro will be recored</string>
    <string name="today_pomodoro">Today pomodoro</string>
    <string name="today_focus_length">Today focus length</string>
    <string name="total_pomodoro">Total Pomodoro</string>
    <string name="total_focus_length">Total focus length</string>
    <string name="timepieces">Timepieces</string>
    <string name="default_type" translatable="false">Normal</string>
    <string name="no_timepiece">No timepiece.</string>
    <string name="user_info">User statistic</string>
    <string name="heatmap">Heatmap</string>
    <string name="no_target_toast">No available target</string>
    <string name="take_break_hint">Focus finished, just take a break.</string>
    <string name="zero_time" translatable="false">00:00</string>
    <string name="work_finish_hint">Just finish a time piece!</string>
    <string name="break_finish_hint">Ready to start focusing</string>
    <string name="msg_login_first">You should login before do this.</string>
    <string name="month">Month</string>
    <string name="date">Date</string>


</resources>