<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_timer">

    <fragment
        android:id="@+id/navigation_timer"
        android:name="top.learningman.hystime.ui.timer.TimerFragment"
        android:label="@string/title_timer"
        />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="top.learningman.hystime.ui.dashboard.DashboardListFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="top.learningman.hystime.ui.setting.SettingFragment"
        android:label="@string/title_setting"/>
</navigation>