<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat

        android:id="@+id/dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical"
        tools:context=".ui.dashboard.ui.DashboardFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView style="@style/Theme.Hystime.DashboardCardView">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Theme.Hystime.DashboardCardViewTitle"
                    android:text="@string/today_pomodoro" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView style="@style/Theme.Hystime.DashboardCardView" >
                <com.google.android.material.textview.MaterialTextView
                    style="@style/Theme.Hystime.DashboardCardViewTitle"
                    android:text="@string/today_focus_length" />
            </com.google.android.material.card.MaterialCardView>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView style="@style/Theme.Hystime.DashboardCardView" >
                <com.google.android.material.textview.MaterialTextView
                    style="@style/Theme.Hystime.DashboardCardViewTitle"
                    android:text="@string/total_pomodoro" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView style="@style/Theme.Hystime.DashboardCardView" >
                <com.google.android.material.textview.MaterialTextView
                    style="@style/Theme.Hystime.DashboardCardViewTitle"
                    android:text="@string/total_focus_length" />
            </com.google.android.material.card.MaterialCardView>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                style="@style/Theme.Hystime.DashboardCardView"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/dashboard_card_height" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>

